<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9EBEB"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtTituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/txtLogin"
        android:textColor="#070607"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="241dp"
        android:layout_height="49dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:hint="@string/placeholder"
        android:inputType="textEmailAddress"
        android:textColor="#070606"
        android:textColorHint="#070606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtContrasenia"
        android:layout_width="241dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/placeholder2"
        android:inputType="textPassword"
        android:textColor="#070606"
        android:textColorHint="#070606"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="428dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/btnIngresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/btnRegistrar"
        app:layout_constraintEnd_toEndOf="@+id/btnIngresar"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/btnIngresar"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />
</androidx.constraintlayout.widget.ConstraintLayout>